--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     </div>
   </main>
 
+  
   <section class="about" id="about">
     <div class="about-container">
       <div class="about-text">
@@ -62,10 +63,10 @@
     </div>
   </section>
 
-<!-- Include Font Awesome CDN for icons -->
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 
 <section id="skills">
   <h2>Skills</h2>
@@ -149,32 +150,24 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
+
+
    <section class="contact-section" id="contact-section">
-  
-  <!-- Success message at the top of the section -->
   <div id="sectionSuccessMessage">
     Message sent successfully!
   </div>
-
   <hr class="border-line" />
-
-  <!-- Contact and Message Box Container -->
   <div class="contact-message-container">
-    <!-- Contact Information Section -->
     <div class="contact-info-box">
       <h1>CONTACT</h1>
-
       <div class="contact-item">
         <div class="contact-label">EMAIL</div>
         <div class="contact-info">corda.jamelagene@mdci.edu.ph</div>
       </div>
-
       <div class="contact-item">
         <div class="contact-label">PHONE</div>
         <div class="contact-info">+631234567890</div>
       </div>
-
       <div class="contact-item">
         <div class="contact-label">ADDRESS</div>
         <div class="contact-info">
@@ -183,8 +176,6 @@
         </div>
       </div>
     </div>
-
-    <!-- Message Box Form -->
     <div class="message-box">
       <h2>Send me a Message</h2>
       <form id="messageForm">
@@ -198,7 +189,6 @@
             required
           />
         </div>
-
         <div class="form-group">
           <label for="email">Your Email</label>
           <input
@@ -209,7 +199,6 @@
             required
           />
         </div>
-
         <div class="form-group">
           <label for="message">Your Message</label>
           <textarea
@@ -220,7 +209,6 @@
             required
           ></textarea>
         </div>
-
         <button type="submit" class="submit-btn">Send Message</button>
       </form>
     </div>
@@ -239,10 +227,10 @@
   <a href="https://t.me/yourprofile" target="_blank" aria-label="Telegram" title="Telegram"> 
     <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
   </a>
-  <a href="YOUR_DISCORD_INVITE_LINK" target="_blank" aria-label="Discord" title="Discord">
+  <a href="https://discord.com/channels/1193841000108531764/1268593960989888711" target="_blank" aria-label="Discord" title="Discord">
     <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" />
   </a>
-  <a href="https://github.com/leighb4t-droid" target="_blank" aria-label="GitHub" title="GitHub">
+  <a href="https://github.com/genecrd/Jamela" target="_blank" aria-label="GitHub" title="GitHub">
   <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" style="filter: invert(100%);" />
 </a>
 </div>
@@ -269,8 +257,9 @@
   </script>
 </section>
 
+
 <footer>
-   <div class="footer-container">
+  <div class="footer-container">
     <div class="footer-info">
       <p><strong>CONTACT</strong></p>
       <p><strong>EMAIL:</strong> corda.jamelagene@mdci.edu.ph</p>
@@ -291,10 +280,10 @@
       <a href="https://t.me/yourprofile" target="_blank" aria-label="Telegram" title="Telegram"> 
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" />
       </a>
-      <a href="YOUR_DISCORD_INVITE_LINK" target="_blank" aria-label="Discord" title="Discord">
+      <a href="https://discord.com/channels/1193841000108531764/1268593960989888711" target="_blank" aria-label="Discord" title="Discord">
        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png" alt="Discord" />
       </a>
-      <a href="https://github.com/leighb4t-droid" target="_blank" aria-label="GitHub" title="GitHub">
+      <a href="https://github.com/genecrd/Jamela" target="_blank" aria-label="GitHub" title="GitHub">
       <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" style="filter: invert(100%);" />
       </a>
     </div>
@@ -303,5 +292,4 @@
   <div class="footer-bottom">
     <p>© 2025 Jamela Gene Corda. All rights reserved.</p>
   </div>
-
 </footer>
